change display to invisible to prevent scrollbar

--- a/css/custom.css
+++ b/css/custom.css
@@ -182,6 +182,10 @@ i {
   visibility: hidden;
 }
 
+.invisible {
+  display: none;
+}
+
 .hvr-grow {
   display: inline-block;
   transform: translateZ(0);
